Update placeholder text
Changed first content text

--- a/_posts/0000-01-02-JohnMcK.md
+++ b/_posts/0000-01-02-JohnMcK.md
@@ -2,6 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Hi! This is the second slide.
+## Slide No. 2!
 This is placeholder text
 Use the left arrow to go back!
